# dijadmt

./: .gitignore  README.md  pyproject.toml
docs/: guide.md
examples/: example.toml  nano.toml
examples/quickshell/: something
src/: conf_reader.py  main.py  managed_files.py  processing.py  renderer.py
src/dijadmt/: cli_parsing.py  conf_reader.py  main.py  ngproc_parser.py  processing.py  renderer.py
