[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dijadmt"
description = "A dotfiles management tool, using TOML files as configuration"
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["version"]

[project.scripts]
dijadmt = "dijadmt.main:main"

[tool.hatch.version]
path = "src/dijadmt/main.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dijadmt"]
